# Mercury

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Mercury.sln  README.md
Mercury/: Architecture.h  Buildings.json  Calc.h  CelestialBody.cpp  CelestialBody.h  CelestialBodyFactory.h  ColoniesWindow.cpp  ColoniesWindow.h  ColoniesWindow.ui  Colony.cpp  Colony.h  Commodities.h  Construction.h  Engine.cpp  Engine.h  Faction.h  GameLoader.h  GameSaver.h  GameWindow.cpp  GameWindow.h  GameWindow.ui  GaseousBody.h  Industry.h  IndustryBuilding.h  IndustryWindow.ui  JsonDataFile.h  Mercury.cpp  Mercury.h  Mercury.pri  Mercury.pro  Mercury.qrc  Mercury.ui  Mercury.vcxproj  Mercury.vcxproj.filters  MercurySave.cpp  MercurySave.h  MiningWindow.ui  NewGameWindow.ui  Orbit.h  PhysicalProperties.h  (+26 more)
Mercury/GeneratedFiles/: qrc_Mercury.cpp  ui_ColoniesWindow.h  ui_GameWindow.h  ui_Mercury.h  ui_MercuryGame.h  ui_MiningWindow.h  ui_NewGameWindow.h  ui_StockpileWindow.h  ui_SummaryWindow.h
cmake/: DeployQt.cmake  findGTest.cmake
tests/: CMakeLists.txt  main.cpp  testOrbit.cpp
